Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 <p>API provided by <a href="http://www.tuling123.com/">http://www.tuling123.com/</a><br>
 Replace APIkey in class Prefs<br>
 <img src="https://github.com/applewalker/Kotori-ChatRobot/raw/master/robot/res/drawable-xhdpi/ic_launcher.png" alt="ICON"><br>
-<a href="https://github.com/applewalker/Kotori-ChatRobot/raw/master/Demo/robot.apk">Download demo</a></p>
+<a href="https://github.com/applewalker/Kotori-ChatRobot/raw/master/Demo/robot.apk">Download demo(Android)</a></p>
         </section>
 
         <footer>
